--- a/environment.yml
+++ b/environment.yml
@@ -1,13 +1,96 @@
-name: plotly
+name: plotly-nele
 channels:
-   - conda-forge
+  - plotly
+  - defaults
 dependencies:
-   - python
-   - ipython
-   - jupyter
-   - numpy
-   - plotly
-   - plotly_express
-   - pip
-   - pip:
-           cufflinks>=0.15
+  - _libgcc_mutex=0.1=main
+  - attrs=19.3.0=py_0
+  - blas=1.0=mkl
+  - ca-certificates=2019.10.16=0
+  - certifi=2019.9.11=py37_0
+  - decorator=4.4.1=py_0
+  - gmp=6.1.2=h6c8ec71_1
+  - importlib_metadata=0.23=py37_0
+  - intel-openmp=2019.4=243
+  - ipython_genutils=0.2.0=py37_0
+  - jinja2=2.10.3=py_0
+  - jsonschema=3.2.0=py37_0
+  - jupyter_core=4.6.1=py37_0
+  - libedit=3.1.20181209=hc058e9b_0
+  - libffi=3.2.1=hd88cf55_4
+  - libgcc-ng=9.1.0=hdf63c60_0
+  - libgfortran-ng=7.3.0=hdf63c60_0
+  - libstdcxx-ng=9.1.0=hdf63c60_0
+  - markupsafe=1.1.1=py37h7b6447c_0
+  - mistune=0.8.4=py37h7b6447c_0
+  - mkl=2019.4=243
+  - mkl-service=2.3.0=py37he904b0f_0
+  - mkl_fft=1.0.15=py37ha843d7b_0
+  - mkl_random=1.1.0=py37hd6b4f25_0
+  - nbconvert=5.6.1=py37_0
+  - nbformat=4.4.0=py37_0
+  - ncurses=6.1=he6710b0_1
+  - numpy=1.17.4=py37hc1035e2_0
+  - numpy-base=1.17.4=py37hde5b4d6_0
+  - openssl=1.1.1d=h7b6447c_3
+  - pandas=0.25.3=py37he6710b0_0
+  - pandoc=2.2.3.2=0
+  - pandocfilters=1.4.2=py37_1
+  - patsy=0.5.1=py37_0
+  - pip=19.3.1=py37_0
+  - plotly=4.3.0=py_0
+  - plotly_express=0.4.1=py_0
+  - pyrsistent=0.15.6=py37h7b6447c_0
+  - python=3.7.5=h0371630_0
+  - python-dateutil=2.8.1=py_0
+  - pytz=2019.3=py_0
+  - readline=7.0=h7b6447c_5
+  - retrying=1.3.3=py37_2
+  - scipy=1.3.1=py37h7c811a0_0
+  - setuptools=42.0.1=py37_0
+  - six=1.13.0=py37_0
+  - sqlite=3.30.1=h7b6447c_0
+  - statsmodels=0.10.1=py37hdd07704_0
+  - testpath=0.4.4=py_0
+  - tk=8.6.8=hbc83047_0
+  - traitlets=4.3.3=py37_0
+  - wheel=0.33.6=py37_0
+  - xz=5.2.4=h14c3975_4
+  - zipp=0.6.0=py_0
+  - zlib=1.2.11=h7b6447c_3
+  - pip:
+    - backcall==0.1.0
+    - bleach==3.1.0
+    - chardet==3.0.4
+    - chart-studio==1.0.0
+    - colorlover==0.3.0
+    - cufflinks==0.17.0
+    - defusedxml==0.6.0
+    - entrypoints==0.3
+    - idna==2.8
+    - importlib-metadata==1.1.0
+    - ipykernel==5.1.3
+    - ipython==7.10.1
+    - ipython-genutils==0.2.0
+    - ipywidgets==7.5.1
+    - jedi==0.15.1
+    - jupyter-client==5.3.4
+    - more-itertools==8.0.0
+    - notebook==6.0.2
+    - parso==0.5.1
+    - pexpect==4.7.0
+    - pickleshare==0.7.5
+    - prometheus-client==0.7.1
+    - prompt-toolkit==3.0.2
+    - ptyprocess==0.6.0
+    - pygments==2.5.2
+    - pyzmq==18.1.1
+    - requests==2.22.0
+    - send2trash==1.5.0
+    - terminado==0.8.3
+    - tornado==6.0.3
+    - urllib3==1.25.7
+    - wcwidth==0.1.7
+    - webencodings==0.5.1
+    - widgetsnbextension==3.5.1
+
