--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: plotly-nele
+name: plotly
 channels:
   - plotly
   - defaults
@@ -65,32 +65,3 @@ dependencies:
     - chart-studio==1.0.0
     - colorlover==0.3.0
     - cufflinks==0.17.0
-    - defusedxml==0.6.0
-    - entrypoints==0.3
-    - idna==2.8
-    - importlib-metadata==1.1.0
-    - ipykernel==5.1.3
-    - ipython==7.10.1
-    - ipython-genutils==0.2.0
-    - ipywidgets==7.5.1
-    - jedi==0.15.1
-    - jupyter-client==5.3.4
-    - more-itertools==8.0.0
-    - notebook==6.0.2
-    - parso==0.5.1
-    - pexpect==4.7.0
-    - pickleshare==0.7.5
-    - prometheus-client==0.7.1
-    - prompt-toolkit==3.0.2
-    - ptyprocess==0.6.0
-    - pygments==2.5.2
-    - pyzmq==18.1.1
-    - requests==2.22.0
-    - send2trash==1.5.0
-    - terminado==0.8.3
-    - tornado==6.0.3
-    - urllib3==1.25.7
-    - wcwidth==0.1.7
-    - webencodings==0.5.1
-    - widgetsnbextension==3.5.1
-
